--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="button buttonEffectPuls">Тестирование</button>
+    <button class="button buttonEffectPulse">Тестирование</button>
     <script src="script.js"></script>
 </body>
 </html>
